:bug: Fix data-scroll-container overflow

--- a/src/stylesheets/base/_base.scss
+++ b/src/stylesheets/base/_base.scss
@@ -38,3 +38,7 @@ p {
 strong {
 	@extend %font-weight-bold;
 }
+
+[data-scroll-container] {
+	@extend %overflow-hidden;
+}
